--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,7 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+html {
+  scroll-behavior: smooth;
+  scroll-padding-top: 80px; /* If you need scroll offset try this magic! */
+}
